# pydap

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yaml  .travis.yml  5_minute_tutorial.html  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  ConstraintExpressions.html  DAP_Protocol.html  LICENSE  MANIFEST.in  NEWS.html  NEWS.md  PydapAsClient.html  README-Server.md  README.auth  README.md  TODO  buildout.cfg  client.html  conftest.py  genindex.html  get_started.html  guide_to_developer.html  handlers.html  how_to_install.html  index.html  intro.html  ldap_test.py  objects.inv  pavement.py  pyproject.toml  pytest.ini  readthedocs.yaml  responses.html  (+7 more)
.claude/: sequence_dap4_plan.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ci_py311.yml  pre-commit.yml  publish_to_pypi.yml  python.yml  python_macos.yml  run_tests_macos.yml  run_tests_ubuntu.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_sources/: 5_minute_tutorial.ipynb  client.ipynb  get_started.md  how_to_install.md  responses.rst
_sources/contribute/: contr_docs.md
_sources/notebooks/: Authentication.ipynb  ECCO.ipynb  PACE.ipynb  SWOT.ipynb
ci/: environment.yml
contribute/: contr_cod.html  contr_docs.html  contr_issues.html  git.html
developer/: data_model.html  handlers.html  responses.html
docs/: 5_minute_tutorial.ipynb  ConstraintExpressions.ipynb  Makefile  NEWS.md  Special chars.odt  _config.yml  _toc.yml  build.sh  client.ipynb  client.md  client.rst  conf.py  developer.rst  developer_contributer.rst  developer_data_model.rst  developer_documentation.rst  developer_handlers.rst  developer_responses.rst  developer_templating.rst  environment.yml  guide_to_developer.md  handlers.rst  how_to_install.md  index.rst  intro.md  license.rst  make.bat  responses.rst  server.rst
docs/.ipynb_checkpoints/: client-checkpoint.ipynb  how_to_install-checkpoint.md
docs/_build_en/: 5_minute_tutorial.html  ConstraintExpressions.html  DAP_Protocol.html  NEWS.html  PydapAsClient.html  genindex.html  get_started.html  guide_to_developer.html  handlers.html  how_to_install.html  intro.html  objects.inv  responses.html  search.html  searchindex.js  server.html
docs/_build_es/: 5_minute_tutorial.html  ConstraintExpressions.html  DAP_Protocol.html  NEWS.html  PydapAsClient.html  genindex.html  get_started.html  guide_to_developer.html  handlers.html  how_to_install.html  intro.html  objects.inv  responses.html  search.html  searchindex.js  server.html
docs/contribute/: contr_cod.md  contr_docs.md
docs/developer/: data_model.rst  handlers.rst  responses.rst
docs/en/: 5_minute_tutorial.ipynb  DAP_Protocol.ipynb  NEWS.md  PydapAsClient.ipynb  Q1.ipynb  Q2.ipynb  Q3.ipynb  Q4.ipynb  _config.yml  _toc.yml  faqs.ipynb  get_started.md  how_to_install.md  intro.md  responses.rst
docs/es/: 5_minute_tutorial.ipynb  ConstraintExpressions.ipynb  DAP_Protocol.ipynb  NEWS.md  PydapAsClient.ipynb  _config.yml  _toc.yml  get_started.md  guide_to_developer.md  how_to_install.md  intro.md
docs/notebooks/: Authentication.ipynb  CMIP6.ipynb  ECCO.ipynb  PACE.ipynb  SWOT.ipynb
en/: .buildinfo  5_minute_tutorial.html  ConstraintExpressions.html  DAP_Protocol.html  NEWS.html  PydapAsClient.html  Q1.html  Q2.html  Q3.html  Q4.html  faqs.html  genindex.html  get_started.html  guide_to_developer.html  handlers.html  how_to_install.html  intro.html  objects.inv  responses.html  search.html  searchindex.js  server.html
en/_sources/: 5_minute_tutorial.ipynb  NEWS.md  intro.md  server.rst
en/_static/: webpack-macros.html
en/contribute/: contr_cod.html  contr_docs.html  contr_issues.html  git.html
en/developer/: data_model.html  handlers.html  responses.html
en/faqs/: dap2_or_dap4_url.html  dap2_vs_dap4.html  diagnose_download_issues.html  download_speed.html  faqs.html
en/notebooks/: Authentication.html  CMIP6.html  CalipsoL2_access.html  DAYMET.html  ECCO.html  Ecostress.html  GetCMRURLS.html  MERRA2.html  PACE.html  SWOT.html  TEMPO_NRT.html  earthaccess.html  netrc.html
es/: .buildinfo  5_minute_tutorial.html  ConstraintExpressions.html  DAP_Protocol.html  NEWS.html  PydapAsClient.html  genindex.html  get_started.html  guide_to_developer.html  handlers.html  how_to_install.html  intro.html  objects.inv  responses.html  search.html  searchindex.js  server.html
es/_sources/: 5_minute_tutorial.ipynb  NEWS.md  get_started.md  guide_to_developer.md  how_to_install.md  responses.rst
es/_static/: webpack-macros.html
es/contribute/: contr_cod.html  contr_docs.html  contr_issues.html  git.html
es/developer/: data_model.html  handlers.html  responses.html
es/faqs/: dap2_or_dap4_url.html  dap2_vs_dap4.html  diagnose_download_issues.html  download_speed.html  faqs.html
es/notebooks/: Authentication.html  CalipsoL2_access.html  DAYMET.html  ECCO.html  Ecostress.html  GetCMRURLS.html  MERRA2.html  PACE.html  TEMPO_NRT.html  earthaccess.html  netrc.html
notebooks/: Authentication.html  CMIP6.html  ECCO.html  PACE.html  SWOT.html
pydap/: __init__.py  client.py  exceptions.py  lib.py  model.py  net.py  proxy.py  tests.py  xdr.py
pydap.egg-info/: PKG-INFO  requires.txt
pydap/handlers/: helper.py  lib.py
pydap/parsers/: __init__.py  das.py  dds.py
pydap/responses/: ascii.py  das.py  dds.py  dods.py  error.py  help.py  html.py  lib.py  version.py
pydap/tests/: rainfall_time_malaysia.cdp.dds  test_dapper.py  test_handlers_netcdf.py  test_model.py  test_net.py  test_parsers_dds.py  test_pydap.py  test_responses_dds.py  test_responses_dods.py  test_server_devel.py  test_special_chars.py  test_webtest.py  test_wsgi_app.py
pydap/util/: esgf.py  http.py  odict.py  rwlock.py  safeeval.py  socks.py  template.py  urs.py
pydap/wsgi/: cache.py  file.py  proxy.py  templates.py
pydocs/: _config.yml  _toc.yml  intro2.md
pydocs/contribute/: contr_cod.md
pydocs/notebooks/: ECCO.ipynb  SWOT.ipynb
src/pydap/: __init__.py  _version.py  lib.py  (+6 more)
src/pydap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+595 files in other folders)
